rust/crates/rax-nmea/src/sentence/snapshots/rax_nmea__sentence__dtm__test__1.snap
---
source: crates/rax-nmea/src/sentence/dtm.rs
expression: dtm
---
{
  "datum": "UserDefined",
  "sub_datum": null,
  "lat": 0.08,
  "lon": 0.07,
  "alt": -47.7
}
